WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269864
AX: VoiceOver MacOS does not read the web datetime elements in the same way as other system datetime controls.
https://bugs.webkit.org/show_bug.cgi?id=269864
Summary
AX: VoiceOver MacOS does not read the web datetime elements in the same way a...
Andres Gonzalez
Reported
2024-02-21 13:10:15 PST
.
Attachments
Patch
(19.67 KB, patch)
2024-02-21 13:18 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(19.68 KB, patch)
2024-02-22 05:27 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(19.68 KB, patch)
2024-02-22 05:31 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-21 13:10:29 PST
<
rdar://problem/123399237
>
Andres Gonzalez
Comment 2
2024-02-21 13:18:51 PST
Created
attachment 470004
[details]
Patch
Andres Gonzalez
Comment 3
2024-02-22 05:27:16 PST
Created
attachment 470011
[details]
Patch
Andres Gonzalez
Comment 4
2024-02-22 05:31:21 PST
Created
attachment 470012
[details]
Patch
EWS
Comment 5
2024-02-22 07:02:05 PST
Committed
275176@main
(b73fb5f69228): <
https://commits.webkit.org/275176@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470012
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug